# ImgToASCII

./: .gitignore  CMakeLists.txt  README.md
Include/: CommandParser.h  Config.h  Config.h.in  ImageConverter.h  ImageDownloader.h  ImageToASCII.h
Scripts/: build.sh  configure.sh  install.sh  run.sh  runTests.sh
Src/: CommandParser.cpp  ImageConverter.cpp  ImageDownloader.cpp  ImageToASCII.cpp  Main.cpp
Tests/: CMakeLists.txt  TestCommandParser.cpp  TestMain.cpp
